--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -1,7 +1,7 @@
-jobs:
-  - name:               myJob
-    type:               runSh
-    steps:
-      - TASK:
-        - script:           composer install
-        - script:           ./vendor/bin/phpunit --bootstrap vendor/autoload.php
+# jobs:
+#   - name:               myJob
+#     type:               runSh
+#     steps:
+#       - TASK:
+#         - script:           composer install
+#         - script:           ./vendor/bin/phpunit --bootstrap vendor/autoload.php
