--- a/shippable.yml
+++ b/shippable.yml
@@ -10,18 +10,16 @@ branches:
     - master
     - release/*
 
-# build:
-#   pre_ci:
-#     - mkdir -p shippable/testresults
-#     - mkdir -p shippable/codecoverage
-#   ci:
+build:
+  ci:
 #     - composer install
 #     - ./vendor/bin/phpunit --bootstrap vendor/autoload.php
-#   post_ci:
-#     - ls -lah $SHIPPABLE_BUILD_DIR
-#     - pwd
-#     - ls -lah shippable/buildoutput
-#     - ls -lah shippable/codecoverage
-#     - ls -lah shippable/testresults
+    - ls -lah
+  post_ci:
+    - ls -lah $SHIPPABLE_BUILD_DIR
+    - pwd
+    - ls -lah shippable/buildoutput
+    - ls -lah shippable/codecoverage
+    - ls -lah shippable/testresults
 
 #### END CI CONFIG
