--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -2,6 +2,6 @@ resources:
   - name: php-test-ci_runCI
     type: runCI
   
-  - name: project_repo
-    type: gitRepo
-    integration: github
+#   - name: project_repo
+#     type: gitRepo
+#     integration: github
