--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -1,7 +1,7 @@
 resources:
-  - name: php-test-ci_runCI
-    type: runCI
-  
-#   - name: project_repo
-#     type: gitRepo
-#     integration: github
+  - name: fazer-deploy-no-docker-hub
+    type: image
+    integration: docker-hub
+    versionTemplate:
+      sourceName: php-test-ci-imagem
+      versionName: latest
